tests/parser/stmt_parser/snapshots/r#mod__parser__stmt_parser__var_parser__parse_state_no_type.snap
---
source: tests/parser/stmt_parser/var_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 15,
        },
        kind: StateVar {
            name: "delay",
            value_type: None,
            def_val: [
                ExprToken {
                    range: Range {
                        start: 14,
                        end: 15,
                    },
                    kind: IntLiteral(
                        0,
                    ),
                },
            ],
        },
    },
]
